--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ h3{
 }
 .banna{
     height: 130vh;
-    background-image: url('/Images/banner.jpeg');
+    background-image: url('Images/banner.jpeg');
     background-repeat: no-repeat; 
     display: flex;
     justify-content: center;
@@ -106,7 +106,7 @@ h3{
 }
 
 .gal-image2{
-    background-image: url('/Images/gallery-2.jpeg');
+    background-image: url('Images/gallery-2.jpeg');
 }
 
 .gal-image3{
